# edge-ai-libraries

.github/: CODEOWNERS
.github/workflows/: dls-build-and-test-deb_pkgs-and-deb_imgs.yaml  dls-build-and-test-windows.yaml  dls-build-dev-docker-images-and-run-unit.yaml  dls-download-models.yaml  dlsps-build-scans-pr-workflow.yaml
libraries/edge-control-libraries/fieldbus/robotmctask/docs/: introduction.md
libraries/robotics-ai-libraries/orb-extractor/: CMakeLists.txt  Makefile  README-external.md  README.md
libraries/robotics-ai-libraries/orb-extractor/humble/debian/: changelog  control  rules  shlibs.local
libraries/robotics-ai-libraries/orb-extractor/jazzy/debian/: changelog  control
libraries/robotics-ai-libraries/orb-extractor/src/gpu/: fast.cpp  orb_descriptor.cpp  resize.cpp
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/: CMakeLists.txt
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/include/: device.h  device_impl.h
libraries/robotics-ai-libraries/orb-extractor/src/sycl_utils/src/: device.cpp  device_impl.cpp  device_memory.cpp  gpu_memory_manager.cpp
libraries/robotics-ai-libraries/orb-extractor/tests/: CMakeLists.txt
libraries/robotics-ai-libraries/orb-extractor/tests/fuzzer/: CMakeLists.txt  fuzzer_stereo.cpp
libraries/robotics-ai-libraries/orb-extractor/tests/src/: FastTest.cpp  GaussianTest.cpp  ImagemaskTest.cpp  MulticameraTest.cpp  MultithreadTest.cpp  OpencvfreeTest.cpp  OrbDescriptorTest.cpp  RectmaskTest.cpp  ResizeTest.cpp  StereoTest.cpp
microservices/audio-analyzer/docs/user-guide/: index.md
microservices/dlstreamer-pipeline-server/: README.md
microservices/dlstreamer-pipeline-server/docker/: docker-compose-mediamtx.yml  docker-compose-otel.yml  docker-compose.yml
microservices/dlstreamer-pipeline-server/docs/user-guide/: get-started.md  how-to-add-system-timestamps-to-metadata.md  how-to-autostart-pipelines.md  how-to-build-from-source.md  how-to-change-dlstreamer-pipeline.md  how-to-deploy-with-helm.md  how-to-download-and-run-yolo-models.md  how-to-launch-and-manage-pipeline.md  how-to-launch-configurable-pipelines.md  how-to-perform-webrtc-frame-streaming.md  how-to-publish-metadata-over-ros2.md  how-to-run-udf-pipelines.md  how-to-start-dlsps-mqtt-publish.md  how-to-store-metadata-influxdb.md  how-to-store-s3-frame.md  how-to-use-gpu-for-decode-and-inference.md  how-to-use-image-file-as-source-over-request-payload.md  how-to-use-rtsp-camera-as-video-source.md  index.md  troubleshooting.md
microservices/dlstreamer-pipeline-server/docs/user-guide/_assets/: pipeline-server.yaml
microservices/dlstreamer-pipeline-server/docs/user-guide/advanced-guide/: Overview.md
microservices/dlstreamer-pipeline-server/docs/user-guide/get-started/: system-requirements.md
microservices/dlstreamer-pipeline-server/helm/: values.yaml
microservices/dlstreamer-pipeline-server/helm/templates/: dlstreamer-pipeline-server-deployment.yaml
microservices/document-ingestion/pgvector/docs/: index.md
microservices/model-download/: pyproject.toml
microservices/model-download/docker/: Dockerfile  entrypoint.sh
microservices/model-download/docs/user-guide/: Overview.md  get-started.md  system-requirements.md
microservices/model-download/docs/user-guide/api-docs/: openapi.yaml
microservices/model-download/src/api/: models.py
microservices/model-download/src/plugins/: openvino_plugin.py
microservices/model-download/tests/unit/: test_openvino_plugin.py
microservices/model-registry/docker/: docker-compose-dev.yml  docker-compose.yml
microservices/model-registry/docs/user-guide/: index.md  system-requirements.md
microservices/multilevel-video-understanding/: README.md
microservices/multilevel-video-understanding/docs/user-guide/: get-started.md  index.md
microservices/time-series-analytics/docs/user-guide/: index.md
microservices/vector-retriever/milvus/src/: retriever_milvus.py
microservices/visual-data-preparation-for-retrieval/milvus/src/: indexer.py
microservices/vlm-openvino-serving/: pyproject.toml
microservices/vlm-openvino-serving/docker/: Dockerfile
microservices/vlm-openvino-serving/docs/user-guide/: Overview.md  get-started.md
microservices/vlm-openvino-serving/src/: app.py
microservices/vlm-openvino-serving/src/utils/: utils.py
sample-applications/chat-question-and-answer/: docker-compose.yaml  setup.sh
sample-applications/chat-question-and-answer-core/: Makefile
sample-applications/chat-question-and-answer-core/docs/user-guide/: index.md
sample-applications/chat-question-and-answer/docs/user-guide/: build-from-source.md  get-started.md  index.md
sample-applications/document-summarization/docs/user-guide/: index.md
sample-applications/video-search-and-summarization/: setup.sh
sample-applications/video-search-and-summarization/docker/: compose.summary.yaml
sample-applications/video-search-and-summarization/docs/user-guide/: index.md
sample-applications/video-search-and-summarization/ui/react/: package-lock.json  package.json
tools/visual-pipeline-and-platform-evaluation-tool/: compose.yml  setup_env.sh
tools/visual-pipeline-and-platform-evaluation-tool/collector/: Dockerfile
tools/visual-pipeline-and-platform-evaluation-tool/docs/user-guide/: index.md
tools/visual-pipeline-and-platform-evaluation-tool/shared/models/: supported_models.yaml
tools/visual-pipeline-and-platform-evaluation-tool/shared/videos/: default_recordings.yaml
tools/visual-pipeline-and-platform-evaluation-tool/ui/: package-lock.json  package.json
tools/visual-pipeline-and-platform-evaluation-tool/ui/src/: index.css  main.tsx
tools/visual-pipeline-and-platform-evaluation-tool/vippet/: graph.py  gst_runner.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/managers/: validation_manager.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/pipelines/: metro-smart-parking-cpu.yaml  metro-smart-parking-gpu.yaml  metro-smart-parking-npu.yaml
tools/visual-pipeline-and-platform-evaluation-tool/vippet/tests/: graph_test.py  gst_runner_test.py
(+45 files in other folders)
