[project]
name = "model-download"
version = "1.0.1"
description = "A FastAPI application for downloading and converting HuggingFace/Ollama models."
authors = [
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

dependencies = [
    "fastapi==0.121.3",
    "pydantic==2.12.3",
    "structlog==25.1.0",
    "uvicorn==0.38.0",
    "PyYAML==6.0.2",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.21.1,<1.0.0",
    "httpx>=0.24.1,<1.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "pytest-env>=1.1.0,<2.0.0",
    "responses>=0.25.0,<1.0.0",
    "freezegun>=1.5.0,<2.0.0",
    # Include plugin dependencies for testing
    "huggingface-hub[cli,hf-transfer,hf-xet]==0.36.0",
    "openvino==2025.4.0",
    "ultralytics==8.2.3",
    "torchvision",
    "torch==2.9.1+cpu",
]

huggingface = [
    "huggingface-hub[cli,hf-transfer,hf-xet]==0.36.0",
    "sentence-transformers==5.1.2",
    "einops==0.8.1",
    "torchvision",
    "torch==2.9.1+cpu",
]

ultralytics = [
    "ultralytics==8.2.3",
    "torchvision",
    "torch==2.9.1+cpu",
]

openvino = [
    "huggingface-hub[cli,hf-transfer,hf-xet]==0.36.0",
    "optimum-intel @ git+https://github.com/huggingface/optimum-intel.git@aed07975d817c124fd5d45375ac131d4a068b557",
    "openvino-tokenizers==2025.4.0.0",
    "openvino==2025.4.0",
    "accelerate==1.11.0",
    "nncf @ git+https://github.com/openvinotoolkit/nncf.git",
    "numpy==2.2.6",
    "sentence-transformers==5.1.2",
    "sentencepiece==0.2.1",
    "transformers<4.54",
    "einops==0.8.1",
    "torchvision",
    "torch==2.9.1+cpu",
    "timm==1.0.22",
    "diffusers==0.35.2",
    "pillow==12.0.0",
]

ollama = [
    # Ollama is installed as a binary, no Python dependencies required
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.uv.pip]
index-strategy = "unsafe-best-match"

# Pytest configuration - updated for new structure
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
env = [
    "HF_TOKEN=hf_test_token_for_testing",
    "MODELS_DIR=/tmp/test_models",
    "LOGS_DIR=/tmp/test_logs",
]

# Coverage configuration - updated for new structure
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*", 
    "*/__pycache__/*",
    "*/conftest.py",
    "*/test_*.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
